@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<layers name="" meta_type="ComponentRegistry">
+    <layer name="wildcard.media" 
+           interface="wildcard.media.interfaces.ILayer"
+		   remove="True" />
+</layers>
