@@ -1,0 +1,17 @@
+<?xml version="1.0"?>
+<object>
+ <resourcetypes>
+  <linkable purge="False">
+    <element value="WildcardVideo" remove="True" />
+    <element value="WildcardAudio" remove="True" />
+  </linkable>
+</resourcetypes>
+<layout purge="False">
+   <styles purge="False">
+   <element value="Video|span|wcvideo" remove="True" />
+   <element value="Small Video|span|wcvideo video-small" remove="True" />
+   <element value="Large Video|span|wcvideo video-large" remove="True" />
+   <element value="Audio|span|wcaudio" remove="True" />
+  </styles>
+ </layout>
+</object>
