@@ -8,6 +8,8 @@ Changelog
   [zombified]
 - i18n support and italian translation
   [keul]
+- More complete uninstall profile
+  [keul]
 
 1.2b1 (2014-06-12)
 ------------------
